pkg/kapt/testdata/namespaces.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: apps
- apiVersion: v1
  kind: Namespace
  metadata:
    name: disabled
    labels:
      policies-disabled: "true"
