pkg/kapt/testdata/policy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: job-backoff-limit.example.com
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["batch"]
      apiVersions: ["*"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["cronjobs", "jobs"]
  variables:
  - name: jobSpec
    expression: "request.kind.kind == 'CronJob' ? object.spec.jobTemplate.spec : object.spec"
  validations:
  - expression: "!has(variables.jobSpec.backoffLimit) || int(variables.jobSpec.backoffLimit) <= 10"
    messageExpression: "'Do not set backoffLimit > 10 on ' + object.metadata.name"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: job-backoff-limit.example.com
spec:
  policyName: job-backoff-limit.example.com
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchExpressions:
      - {key: policies-disabled, operator: NotIn, values: ['true']}
    objectSelector:
      matchExpressions:
      - {key: project, operator: NotIn, values: ['ignored']}
